--- a/src/cascadia/TerminalSettingsEditor/GlobalAppearance.xaml
+++ b/src/cascadia/TerminalSettingsEditor/GlobalAppearance.xaml
@@ -55,6 +55,13 @@ the MIT License. See LICENSE in the project root for license information. -->
                           Style="{StaticResource CheckBoxSettingStyle}"/>
             </ContentPresenter>
 
+            <!--Always on Top-->
+            <ContentPresenter Style="{StaticResource SettingContainerStyle}">
+                <CheckBox x:Uid="Globals_AlwaysOnTop"
+                          IsChecked="{x:Bind State.Globals.AlwaysOnTop, Mode=TwoWay}"
+                          Style="{StaticResource CheckBoxSettingStyle}"/>
+            </ContentPresenter>
+
             <!--Tab Width Mode-->
             <ContentPresenter Style="{StaticResource SettingContainerStyle}">
                 <muxc:RadioButtons x:Uid="Globals_TabWidthMode"
