Maintain current Pivot selection when saving on the Profiles page (#8803)
This PR Makes sure that after you save the settings, we stay on the same part of the profiles pivot. We do this by having a singleton `ProfilesNavigationState`, a bit like the color scheme one in #8799. Hence why this PR is targeting the other.

## PR Checklist
* [x] I work here
* [x] Tested manually
* [x] Fixes the first point in #8769

--- a/src/cascadia/TerminalSettingsEditor/Profiles.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Profiles.xaml
@@ -50,8 +50,10 @@ the MIT License. See LICENSE in the project root for license information. -->
                    Style="{StaticResource DisclaimerStyle}"
                    Visibility="{x:Bind State.Profile.IsBaseLayer}"/>
 
-        <Pivot HorizontalAlignment="Left"
+        <Pivot x:Name="ProfilesPivot"
+               HorizontalAlignment="Left"
                Grid.Row="1"
+               SelectionChanged="Pivot_SelectionChanged"
                Margin="{StaticResource PivotIndentMargin}">
             <!-- General Tab -->
             <PivotItem x:Uid="Profile_General">
